--- a/style.css
+++ b/style.css
@@ -1,10 +1,45 @@
 body{
     font-family: "Science Gothic", sans-serif;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 20px;
+    color: white;
     text-align: center;
+}
+
+.link-container{
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    width: 250px;
+    padding: 5px;
+    margin: 0 auto;
 }
 
 ul{
     list-style-type: none;
+    padding: 0;
 }
+
+li{
+    margin: 50px 0;
+}
+
+a{
+    color:white;
+    text-decoration: none;
+}
+
+a:visited{
+    color: white;
+}
+
+video{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
