--- a/style.css
+++ b/style.css
@@ -51,3 +51,33 @@ video{
     z-index: -1;
 }
 
+
+#landing-page{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+#main-site {
+    display: none;
+}
+
+#enter-button {
+    padding: 15px 30px;
+    font-size: 24px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border: none;
+    color: white;
+}
